<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundcolor"
    tools:context=".MainActivity2">

    <ImageButton
        android:id="@+id/downbtn"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="92dp"
        android:background="@drawable/imgbtn"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/downnew" />

    <ImageButton
        android:id="@+id/upbtn"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="92dp"
        android:background="@drawable/imgbtn"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/upnew" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="195dp"
        android:layout_height="242dp"
        android:layout_marginTop="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wallet" />

    <TextView
        android:id="@+id/uselabel1"
        android:layout_width="121dp"
        android:layout_height="79dp"
        android:gravity="center"
        android:hint="@string/wallethint"
        android:textSize="25sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.637" />

    <Button
        android:id="@+id/playbtn"
        android:layout_width="110dp"
        android:layout_height="63dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/girisbtncolor"
        android:text="@string/play1"
        android:textColor="@color/cyan"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"

        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtviewlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/wallet"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

</androidx.constraintlayout.widget.ConstraintLayout>